--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -89,6 +89,11 @@
     letter-spacing: 1px;
     padding-top: 20px;
 }
+@media(max-width:768px) {
+.center-item{
+    padding-bottom: 300px;
+      }
+}
 .btn-1{
     text-align: center;
     border: 1px solid;
