--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -52,7 +52,7 @@
     opacity: 1;
     width: 100%;
     height: 0%;
-    z-index: -1;
+    text-align: center;
    
     
 }
@@ -89,11 +89,7 @@
     letter-spacing: 1px;
     padding-top: 20px;
 }
-@media(max-width:768px) {
-.center-item{
-    padding-bottom: 300px;
-      }
-}
+
 .btn-1{
     text-align: center;
     border: 1px solid;
