--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -53,12 +53,13 @@
     width: 100%;
     height: 0%;
     text-align: center;
+    box-sizing: border-box;
    
     
 }
  .hov:hover{
     width: 100%;
-    height: 100%;
+    height: auto;
     transition: 0.7s ease;
   
 }
