--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -54,12 +54,13 @@
     height: 0%;
     text-align: center;
     box-sizing: border-box;
-   
-    
+}
+.row-padding{
+    padding-top: 400px;
 }
  .hov:hover{
     width: 100%;
-    height: 390px;
+    height: 430px;
     transition: 0.7s ease;
   
 }
