--- a/src/componets/home/header.css
+++ b/src/componets/home/header.css
@@ -69,22 +69,32 @@ header button:hover{
         margin: 0px 0px 20px 70px;
     }    
 }
-@media(max-width:539px){
+@media(max-width:400px){
     header h2{
         font-size: 30px;
+        text-align: center;
     }
     header p{
-        font-size: 15px;
+        box-sizing: border-box;
+        font-size: 16px;
+        text-align: center;
+        margin: 30px 15px;
+    
     }
     header .btn-1 , header .btn-2{
         width: 150px;
         height: 30px;
         font-size: 15px;
-        margin-left: 125px;
-        margin-bottom: 5px;
+        text-align: center;
+        margin: auto;
+        display: block;
     }
-    .btn-2{
+    header .btn-2{
         text-transform: uppercase;
+        text-align: center;
+        margin: auto;
+        display: block;
+        margin-top: 15px;
     }
     
       
